--- a/css/styles.css
+++ b/css/styles.css
@@ -539,6 +539,8 @@ body {
 
 .product-card__image-container img {
     width: 100%;
+	height: 100%;
+	object-fit: cover;
     display: block;
     position: static;
     top: 0;
